--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <p class="apropos__texte">J'ai 21 ans et je suis originaire de Bordeaux. À l'heure actuelle, j'habite à Gap, loin de ma famille et de mon entourage. J'y fais mes études, un BTS en informatique.</p>
                     <p class="apropos__texte">Je suis un passionné d'informatique depuis tout petit. Depuis que je fais de la programmation, je n'ai jamais eu l'idée de changer d'orientation, car celle-ci me passionne de jour en jour, à chaque nouvelle découverte.</p>
                     <button id="open" class="bouton bouton__cv">Consulter mon CV</button>
-                    <a download="" href="assets/pdf/Melvin_Viougea_CV.pdf" class="bouton">Télécharger mon CV</a>
+                    <a href="assets/img/about.jpeg" download="assets/img/about.jpeg" class="bouton">Télécharger mon CV</a>
                 </div>
             </div>
         </section>
@@ -331,7 +331,7 @@
     <!--========== modal ==========-->
     <div class="modal__container" id="modal__container">
         <div class="modal">
-            <button id="close" class="bouton__modal">X</button>
+            <button id="close" class="bouton__modal"><p class="bouton__modal-position">+</p></button>
             <img src="assets/img/cv.png" alt="">
         </div>
     </div>
