--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
                     <h2 class="stages__subtitle">Stage de première année</h2>
                     <p class="stages__texte">Mon stage a été réalisé dans l'entreprise Computeris.</p>
                     <h4 class="stages__subtitle">Présentation de l'entreprise</h4>
-                    <p class="stages__texte">L'entreprise met en relation des techniciens et des client pour divers mission sur le territoire français.</p>
+                    <p class="stages__texte">L'entreprise est une start-up spécialisée dans la mise en relation d'experts dans le domaine de l’IT avec des clients notamment des entreprises nécessitant des techniciens qualifiés, sur tout le territoire français.</p>
                     <h4 class="stages__subtitle">Objectif du stage</h4>
-                    <p class="stages__texte">Le but du stage était de développer un site web pour l'entreprise</p>
+                    <p class="stages__texte">Le but du stage était de développer un nouveau site web pour l'entreprise</p>
                     <h4 class="stages__subtitle">Rapport de stage</h4>
                     <div class="stages__conteneur bd-grille">
                         <div class="stages__img">
@@ -245,7 +245,7 @@
                     <h2 class="stages__title">Stage de deuxième année</h2>
                     <p class="stages__texte">Mon stage a été réalisé dans l'entreprise Solution909.</p>
                     <h4 class="stages__subtitle">Présentation de l'entreprise</h4>
-                    <p class="stages__texte">L'entreprise est une start-up récente qui propose diverses formations pour le métier de DPO. L'entreprise prévoit de nouvelle vois pour se développer.</p>
+                    <p class="stages__texte">Solutions 909 est une start-up spécialisée dans l’accompagnement des sociétés à la mise en conformité au RGPD avec une forte expertise dans la Santé.</p>
                     <h4 class="stages__subtitle">Objectif du stage</h4>
                     <p class="stages__texte">Le but du stage était de développer un site web pour l'entreprise, de corriger le site principal mis en production et de continuer un site actuel.</p>
                     <h4 class="stages__subtitle">Rapport de stage</h4>
