--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             </ul>
                         </div>
                     </div>
-                    <a download="" href="https://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/bts-services-informatiques-aux-organisations-option-a-solutions-d-infrastructure-systemes-et-reseaux" class="bouton">+ d'info sur le BTS SIO</a>
+                    <a download="" href="https://www.cned.fr/bts/bts-services-informatiques-aux-organisations-sio" class="bouton">+ d'info sur le BTS SIO</a>
                 </div>
         </section>
         <!--========== compétences ==========-->
