--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="accueil__img">
                 <svg class="accueil__blob" viewBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <mask id="mask0" mask-type="alpha">
+                    <mask id="mask0">
                         <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 165.547 
                             130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 129.362C2.45775 
                             97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 -0.149132 97.9666 
@@ -60,7 +60,7 @@
                             165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
                             129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                             -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
-                        <image class="accueil__blob-img" x='12' y='18' href="assets/img/profil.png" />
+                        <image width="170px" height="100%" x='12' y='10' href="assets/img/profil.png" />
                     </g>
                 </svg>
             </div>
@@ -138,6 +138,7 @@
                     </div>
                     <a download="" href="https://www.cned.fr/bts/bts-services-informatiques-aux-organisations-sio" class="bouton">+ d'info sur le BTS SIO</a>
                 </div>
+            </div>
         </section>
         <!--========== compétences ==========-->
         <section class="competences section" id="competences">
@@ -257,6 +258,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
         <!--========== projets ==========-->
         <section class="projets section " id="projets">
@@ -597,6 +599,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
         <!--========== contact ==========-->
         <section class="contact section" id="contact">
@@ -605,7 +608,7 @@
                 <form name="formulaire" class="contact__formulaire" action="recupDonnees.php" method="post">
                     <input type="text" name="nom" placeholder="Nom" class="contact__input">
                     <input type="email" name="email" placeholder="Email" class="contact__input">
-                    <textarea id="message" name="message" cols="0" rows="10" class="contact__input"></textarea>
+                    <textarea id="message" name="message" rows="10" class="contact__input"></textarea>
                     <input type="submit" value="Envoyer" name="submit" class="contact__bouton bouton">
                 </form>
             </div>
@@ -628,7 +631,7 @@
     <!--========== modal ==========-->
     <div class="modal__container" id="modal__container">
         <div class="modal">
-            <button id="close" class="bouton__modal"><p class="bouton__modal-position">+</p></button>
+            <button id="close" class="bouton__modal">x</button>
             <img src="assets/img/cv.png" alt="">
         </div>
     </div>
