--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <!-- ========== css ========== -->
     <link rel="stylesheet" href="assets/css/styles.css">
-
+    <!-- ========== favicon ========== -->
+    <link rel="icon" sizes="16x16" href="favicon.ico">
     <!-- ========== box icones ========== -->
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 
@@ -635,14 +636,6 @@
             <img src="assets/img/cv.png" alt="">
         </div>
     </div>
-    <!--
-    <div class="modal__container" id="modal__container">
-        <div class="modal">
-            <button id="close" class="bouton__modal">X</button>
-            <embed src=assets/pdf/Melvin_Viougea_CV.pdf type='application/pdf' class="doc__pdf" />
-        </div>
-    </div>
-    -->
     <!--========== scroll revel ==========-->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!--========== main JS ==========-->
