--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     <div class="stages__conteneur bd-grille">
                         <div class="stages__img">
                             <a href="https://docs.google.com/document/d/1b0--_00GAYOC92ogoVO415LYfULECp3Vsu37PAwu7zE/edit?usp=sharing">
-                                <img src="assets/img/work7.jpg" alt="stage1">
+                                <img src="assets/img/work7.avif" alt="stage1">
                             </a>
                         </div>
                     </div>
