--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Protfolio de VIOUGEA Melvin">
     <!-- ========== css ========== -->
     <link rel="stylesheet" href="assets/css/styles.css">
     <!-- ========== favicon ========== -->
@@ -61,7 +62,7 @@
                             165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
                             129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                             -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
-                        <image width="170px" height="100%" x='12' y='10' href="assets/img/profil.png" />
+                        <image width="170px" height="100%" x='12' y='10' href="assets/img/profil.webp" />
                     </g>
                 </svg>
             </div>
@@ -72,7 +73,7 @@
 
             <div class="apropos__conteneur bd-grille">
                 <div class="apropos__img">
-                    <img src="assets/img/about.jpeg" alt="">
+                    <img src="assets/img/about.webp" alt="melphoto">
                 </div>
                 <div>
                     <h2 class="apropos__subtitle">Je m'appelle Melvin</h2>
@@ -89,7 +90,7 @@
 
             <div class="etudes__conteneurnoflex bd-grille">
                 <div class="etudes__img">
-                    <img src="assets/img/lycee.jpeg" alt="">
+                    <img src="assets/img/lycee.webp" alt="">
                 </div>
                 <div>
                     <h2 class="etudes__subtitle">Lycée dominique villars</h2>
@@ -218,7 +219,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="assets/img/work.jpg" alt="" class="competences__img">
+                    <img src="assets/img/work.webp" alt="" class="competences__img">
                 </div>
             </div>
         </section>
@@ -238,7 +239,7 @@
                     <div class="stages__conteneur bd-grille">
                         <div class="stages__img">
                             <a href="https://docs.google.com/document/d/1b0--_00GAYOC92ogoVO415LYfULECp3Vsu37PAwu7zE/edit?usp=sharing">
-                                <img src="assets/img/work7.avif" alt="stage1">
+                                <img src="assets/img/work7.webp" alt="stage1">
                             </a>
                         </div>
                     </div>
@@ -254,7 +255,7 @@
                     <div class="stages__conteneur bd-grille">
                         <div class="stages__img">
                             <a href="https://docs.google.com/document/d/1xIQR0LPzdcqTgh62gAIZvq6S4ziWG2KsZagw20-jvWM/edit?usp=sharing">
-                                <img src="assets/img/work8.jpg" alt="stage2">
+                                <img src="assets/img/work8.webp" alt="stage2">
                             </a>
                         </div>
                     </div>
@@ -633,7 +634,7 @@
     <div class="modal__container" id="modal__container">
         <div class="modal">
             <button id="close" class="bouton__modal">x</button>
-            <img src="assets/img/cv.png" alt="">
+            <img src="assets/img/cv.webp" alt="">
         </div>
     </div>
     <!--========== scroll revel ==========-->
