last maj lighhouse

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     <div class="stages__conteneur bd-grille">
                         <div class="stages__img">
                             <a href="https://docs.google.com/document/d/1b0--_00GAYOC92ogoVO415LYfULECp3Vsu37PAwu7zE/edit?usp=sharing">
-                                <img src="assets/img/work7.webp" alt="stage1">
+                                <img src="assets/img/stage1.webp" alt="stage1">
                             </a>
                         </div>
                     </div>
@@ -255,7 +255,7 @@
                     <div class="stages__conteneur bd-grille">
                         <div class="stages__img">
                             <a href="https://docs.google.com/document/d/1xIQR0LPzdcqTgh62gAIZvq6S4ziWG2KsZagw20-jvWM/edit?usp=sharing">
-                                <img src="assets/img/work8.webp" alt="stage2">
+                                <img src="assets/img/stage2.webp" alt="stage2">
                             </a>
                         </div>
                     </div>
